--- a/archive/templates/registration/login.html
+++ b/archive/templates/registration/login.html
@@ -1,13 +1,13 @@
 <!-- templates/registration/login.html -->
-{% extends 'base.html' %}
+{% extends 'registration/base.html' %}
 
 {% block title %}Login{% endblock %}
 
-{% block content %}
-<h2>Log In</h2>
-<form method="post">
+{% block form %}
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Log In</button>
-</form>
+  <p class="clearfix mb-0 align-middle">
+    <a href="{% url 'signup' %}">Register</a>
+    <button class="btn btn-lg btn-primary btn-block float-end" type="submit">Sign in</button>
+  </p>
 {% endblock %}
