--- a/archive/templates/registration/signup.html
+++ b/archive/templates/registration/signup.html
@@ -1,12 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'registration/base.html' %}
 
 {% block title %}Sign Up{% endblock %}
 
-{% block content %}
+{% block form %}
   <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
-  </form>
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button class="btn btn-lg btn-primary btn-block float-end" type="submit">Sign Up</button>
 {% endblock %}
