--- a/archive/templates/home.html
+++ b/archive/templates/home.html
@@ -1,11 +1,69 @@
 {% extends 'layout.html' %}
-
 {% block title %}Home{% endblock %}
+
+{% load static %}
 
 {% block content %}
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!
-  <p><a href="{% url 'logout' %}">Log Out</a></p>
+    <!--Hi {{ user.username }}!
+    <p><a href="">Log Out</a></p>-->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <a class="navbar-brand" href="">
+            <img src="{% static 'archive/images/chess.png' %}" alt="Site logo" style="margin-left: 20px; width: 50px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="nav justify-content-center">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="/">
+                        <i class="fa fa-home" aria-hidden="true" style="color: white; font-size: 20px;"></i>
+                        Strona Główna
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/profile">
+                        <i class="fa fa-user" aria-hidden="true" style="color: white; font-size: 20px;"></i>
+                        Profil
+                    </a>
+                </li>
+
+                {% if user.is_superuser %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/admin">
+                            <i class="fa fa-cogs" aria-hidden="true" style="color: white; font-size: 20px;"></i>
+                            Ustawienia
+                        </a>
+                    </li>
+                {% endif %}
+
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'logout' %}">
+                        <i class="fa fa-sign-out" aria-hidden="true" style="color: white; font-size: 20px;"></i>
+                        Wyloguj
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container d-flex flex-column justify-content-center">
+      <h2 class="text-center" style="width: 100%; margin: 20px 0">Witaj, {{ user.username }} !</h2>
+
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-success btn-lg" style="margin-right: 5px">
+          Wyświetl archiwum
+        </button>
+
+        <button class="btn btn-outline-danger btn-lg" style="margin-left: 5px">
+          Dodaj nową partię
+        </button>
+      </div>
+
+    </div>
+
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Log In</a>
