--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -3,8 +3,14 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block form %}
-  <h2>Sign up</h2>
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button class="btn btn-lg btn-primary btn-block float-end" type="submit">Sign Up</button>
+  {% if user.is_authenticated %}
+      <p>You are logged in</p>
+      <a href="/">Back home</a>
+  {% else %}
+    <h2>Sign up</h2>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button class="btn btn-lg btn-primary btn-block float-end" type="submit">Sign Up</button>
+  {% endif %}
+
 {% endblock %}
