--- a/archive/templates/profile.html
+++ b/archive/templates/profile.html
@@ -5,6 +5,60 @@
 
 {% block content %}
 {% if user.is_authenticated %}
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <a class="navbar-brand" href="">
+            <img src="{% static 'archive/images/chess.png' %}" alt="Site logo" style="margin-left: 20px; width: 50px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="nav justify-content-center">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="/">
+                        <i class="fa fa-home" aria-hidden="true" style="color: white; font-size: 20px;"></i>
+                        Strona Główna
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/profile">
+                        <i class="fa fa-user" aria-hidden="true" style="color: white; font-size: 20px;"></i>
+                        Profil
+                    </a>
+                </li>
+
+                {% if user.is_superuser %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/admin">
+                            <i class="fa fa-cogs" aria-hidden="true" style="color: white; font-size: 20px;"></i>
+                            Ustawienia
+                        </a>
+                    </li>
+                {% endif %}
+
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'logout' %}">
+                        <i class="fa fa-sign-out" aria-hidden="true" style="color: white; font-size: 20px;"></i>
+                        Wyloguj
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container d-flex flex-column justify-content-center">
+        <form method="post" style="margin: 30px">
+            {% csrf_token %}
+            {{ form.as_p }}
+
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-lg btn-primary" type="submit" style="width: 200px">Edit</button>
+            </div>
+
+            <p>Forgot your password? <a href="{% url 'password_reset' %}">Click here</a></p>
+        </form>
+    </div>
+
 
 {% else %}
   <p>You are not logged in</p>
