--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,6 +13,8 @@
     <p class="clearfix mb-0 align-middle">
       <a href="{% url 'signup' %}">Register</a>
       <button class="btn btn-lg btn-primary btn-block float-end" type="submit">Sign in</button>
+      <br>
+      <a href="{% url 'logout' %}">Forgot your password?</a>
     </p>
   {% endif %}
 
