--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
-{% block title %}Home{% endblock %}
-
 {% load static %}
+
+{% block title %}Enter new password{% endblock %}
 
 {% block content %}
 {% if user.is_authenticated %}
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <a class="navbar-brand" href="">
             <img src="{% static 'archive/images/chess.png' %}" alt="Site logo" style="margin-left: 20px; width: 50px;">
         </a>
@@ -46,25 +46,20 @@
             </ul>
         </div>
     </nav>
+{% endif %}
 
-    <div class="container d-flex flex-column justify-content-center">
-      <h2 class="text-center" style="width: 100%; margin: 20px 0">Witaj, {{ user.username }} !</h2>
-
-      <div class="d-flex justify-content-center">
-        <button class="btn btn-success btn-lg" style="margin-right: 5px">
-          Wyświetl archiwum
-        </button>
-
-        <button class="btn btn-outline-danger btn-lg" style="margin-left: 5px">
-          Dodaj nową partię
-        </button>
-      </div>
-
-    </div>
-
+{% if validlink %}
+<div class="container d-flex flex-column justify-content-center">
+  <h1 class="text-center">Set a new password!</h1>
+  <form method="POST" class="text-center">
+    {% csrf_token %}
+    {{ form.as_p }}
+      <button class="btn btn-primary btn-lg" type="submit">Change my password</button>
+  </form>
+</div>
 {% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a>
-
+<div class="container d-flex flex-column justify-content-center">
+  <p class="text-center">The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
+</div>
 {% endif %}
 {% endblock %}
