--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
-{% block title %}Home{% endblock %}
-
 {% load static %}
+
+{% block title %}Forgot Your Password?{% endblock %}
 
 {% block content %}
 {% if user.is_authenticated %}
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <a class="navbar-brand" href="">
             <img src="{% static 'archive/images/chess.png' %}" alt="Site logo" style="margin-left: 20px; width: 50px;">
         </a>
@@ -46,25 +46,15 @@
             </ul>
         </div>
     </nav>
-
-    <div class="container d-flex flex-column justify-content-center">
-      <h2 class="text-center" style="width: 100%; margin: 20px 0">Witaj, {{ user.username }} !</h2>
-
-      <div class="d-flex justify-content-center">
-        <button class="btn btn-success btn-lg" style="margin-right: 5px">
-          Wyświetl archiwum
-        </button>
-
-        <button class="btn btn-outline-danger btn-lg" style="margin-left: 5px">
-          Dodaj nową partię
-        </button>
-      </div>
-
-    </div>
-
-{% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a>
-
 {% endif %}
+<div class="container d-flex flex-column justify-content-center">
+  <h1 class="text-center" style="margin-top: 10px">Forgot your password?</h1>
+  <p class="text-center">Enter your email address below, and we'll email instructions for setting a new one.</p>
+
+  <form method="POST" class="text-center">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button class="btn btn-primary btn-lg" type="submit">Send me instructions!</button>
+  </form>
+</div>
 {% endblock %}
