--- a/archive/templates/profile.html
+++ b/archive/templates/profile.html
@@ -18,13 +18,13 @@
                 <li class="nav-item active">
                     <a class="nav-link text-white" href="/">
                         <i class="fa fa-home" aria-hidden="true" style="color: white; font-size: 20px;"></i>
-                        Strona Główna
+                        Home
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/profile">
                         <i class="fa fa-user" aria-hidden="true" style="color: white; font-size: 20px;"></i>
-                        Profil
+                        Profile
                     </a>
                 </li>
 
@@ -32,7 +32,7 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/admin">
                             <i class="fa fa-cogs" aria-hidden="true" style="color: white; font-size: 20px;"></i>
-                            Ustawienia
+                            Settings
                         </a>
                     </li>
                 {% endif %}
@@ -40,7 +40,7 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'logout' %}">
                         <i class="fa fa-sign-out" aria-hidden="true" style="color: white; font-size: 20px;"></i>
-                        Wyloguj
+                        Logout
                     </a>
                 </li>
             </ul>
