--- a/archive/templates/profile.html
+++ b/archive/templates/profile.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% if user.is_authenticated %}
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <a class="navbar-brand" href="">
+        <a class="navbar-brand" href="/">
             <img src="{% static 'archive/images/chess.png' %}" alt="Site logo" style="margin-left: 20px; width: 50px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +61,9 @@
 
 
 {% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a>
+<div class="container text-center">
+    <h2 class="text-center">You are not logged in</h2>
+    <a href="{% url 'login' %}">Log In</a>
+</div>
 {% endif %}
 {% endblock %}
