--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% if user.is_authenticated %}
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <a class="navbar-brand" href="">
+        <a class="navbar-brand" href="/">
             <img src="{% static 'archive/images/chess.png' %}" alt="Site logo" style="margin-left: 20px; width: 50px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,13 +18,13 @@
                 <li class="nav-item active">
                     <a class="nav-link text-white" href="/">
                         <i class="fa fa-home" aria-hidden="true" style="color: white; font-size: 20px;"></i>
-                        Strona Główna
+                        Home
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/profile">
                         <i class="fa fa-user" aria-hidden="true" style="color: white; font-size: 20px;"></i>
-                        Profil
+                        Profile
                     </a>
                 </li>
 
@@ -32,7 +32,7 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/admin">
                             <i class="fa fa-cogs" aria-hidden="true" style="color: white; font-size: 20px;"></i>
-                            Ustawienia
+                            Settings
                         </a>
                     </li>
                 {% endif %}
@@ -40,7 +40,7 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'logout' %}">
                         <i class="fa fa-sign-out" aria-hidden="true" style="color: white; font-size: 20px;"></i>
-                        Wyloguj
+                        Logout
                     </a>
                 </li>
             </ul>
