--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,6 +42,8 @@
             </ul>
         </div>
     </nav>
-    {% block content %}
-    {% endblock %}
+    <main class="container">
+      {% block content %}
+      {% endblock %}
+    </main>
 {% endblock %}
