--- a/archive/templates/home.html
+++ b/archive/templates/home.html
@@ -11,9 +11,9 @@
           Show archive
         </a>
 
-        <button class="btn btn-outline-danger btn-lg" style="margin-left: 5px">
+        <a class="btn btn-outline-danger btn-lg" style="margin-left: 5px" href="{% url 'add_game' %}">
           Add new game
-        </button>
+        </a>
       </div>
 
     </div>
