--- a/archive/templates/list.html
+++ b/archive/templates/list.html
@@ -4,6 +4,7 @@
 {% load static %}
 
 {% block content %}
+{% if user.is_authenticated %}
 <table class="table align-middle">
   <tbody>
     {% for game in object_list %}
@@ -24,4 +25,10 @@
     {% endfor %}
   </tbody>
 </table>
+{% else %}
+<div class="container text-center">
+    <h2 class="text-center">You are not logged in</h2>
+    <a href="{% url 'login' %}">Log In</a>
+</div>
+{% endif %}
 {% endblock %}
