--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,13 +17,14 @@
                         Home
                     </a>
                 </li>
+                {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/profile">
                         <i class="fa fa-user" aria-hidden="true" style="color: white; font-size: 20px;"></i>
                         Profile
                     </a>
                 </li>
-
+                {% endif %}
                 {% if user.is_superuser %}
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/admin">
@@ -32,13 +33,14 @@
                         </a>
                     </li>
                 {% endif %}
-
+                {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'logout' %}">
                         <i class="fa fa-sign-out" aria-hidden="true" style="color: white; font-size: 20px;"></i>
                         Logout
                     </a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
