--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,7 +14,7 @@
       <a href="{% url 'signup' %}">Register</a>
       <button class="btn btn-lg btn-primary btn-block float-end" type="submit">Sign in</button>
       <br>
-      <a href="{% url 'logout' %}">Forgot your password?</a>
+      <a href="{% url 'password_reset' %}">Forgot your password?</a>
     </p>
   {% endif %}
 
