chess game visualization

--- a/archive/templates/details.html
+++ b/archive/templates/details.html
@@ -6,45 +6,51 @@
 {% block content %}
 {% if user.is_authenticated %}
   <div class="d-flex">
-    <table class="table m-3">
-      <tbody>
-        <tr>
-          <th scope="row">Date</th>
-          <td>{{ object.game_date }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Players</th>
-          <td>
-            <ul class="list-unstyled">
-              {% for playerdetail in object.playerdetail_set.all %}
-                <li>
-                  {{ playerdetail.player.name }}
-                  {% if playerdetail.color == "white" %}
-                    <span class="badge bg-light text-dark">White</span>
-                  {% endif %}
-                  {% if playerdetail.color == "black" %}
-                    <span class="badge bg-dark">Black</span>
-                  {% endif %}
-                </li>
-              {% endfor %}
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">Game time</th>
-          <td>{{ object.game_time.game_time }}+{{ object.game_time.time_increment }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Note</th>
-          <td>{{ object.note }}</td>
-        </tr>
-        <tr>
-          <td>
-            <a class="btn btn-primary" href="{% url 'list' %}">Go Back</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="col-md-8 m-3">
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row">Date</th>
+            <td>{{ object.game_date }}</td>
+          </tr>
+          <tr>
+            <th scope="row">Players</th>
+            <td>
+              <ul class="list-unstyled">
+                {% for playerdetail in object.playerdetail_set.all %}
+                  <li>
+                    {{ playerdetail.player.name }}
+                    {% if playerdetail.color == "white" %}
+                      <span class="badge bg-light text-dark">White</span>
+                    {% endif %}
+                    {% if playerdetail.color == "black" %}
+                      <span class="badge bg-dark">Black</span>
+                    {% endif %}
+                  </li>
+                {% endfor %}
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Game time</th>
+            <td>{{ object.game_time.game_time }}+{{ object.game_time.time_increment }}</td>
+          </tr>
+          <tr>
+            <th scope="row">Note</th>
+            <td>{{ object.note }}</td>
+          </tr>
+        </tbody>
+      </table>
+      <div id="svg_div">
+        <a class="btn btn-primary mb-3" href="{% url 'list' %}">Go Back</a><br>
+          {{svg |safe}}
+        <div id="buttons" class="d-flex mt-3">
+          <a class="btn btn-primary mx-3" onclick="prev_move({{svg_list}})">Prev</a><br>
+          <a class="btn btn-primary" onclick="next_move({{svg_list}})">Next</a><br>
+        </div>
+      </div>
+    </div>
+
     <table class="table m-3">
       <thead>
         <tr>
@@ -64,6 +70,31 @@
       </tbody>
     </table>
   </div>
+
+  <script>
+    let counter = 0;
+    function next_move(svg_list){
+        let elem = document.getElementById('svg_div')
+        let buttons = document.getElementById('buttons')
+        if(counter < svg_list.length - 1){
+          elem.removeChild(elem.children[2])
+          let div = document.createElement("div")
+          div.innerHTML = svg_list[++counter]
+          elem.insertBefore(div, buttons)
+        }
+    }
+
+    function prev_move(svg_list){
+        let elem = document.getElementById('svg_div')
+        let buttons = document.getElementById('buttons')
+        if(counter > 0){
+          elem.removeChild(elem.children[2])
+          let div = document.createElement("div")
+          div.innerHTML = svg_list[--counter]
+          elem.insertBefore(div, buttons)
+        }
+    }
+  </script>
 {% else %}
 <div class="container text-center">
     <h2 class="text-center">You are not logged in</h2>
