new sorting and filtration system, game result in details

--- a/archive/templates/details.html
+++ b/archive/templates/details.html
@@ -39,6 +39,10 @@
             <th scope="row">Note</th>
             <td>{{ object.note }}</td>
           </tr>
+          <tr>
+            <th scope="row">Result</th>
+            <td>{{ result }}</td>
+          </tr>
         </tbody>
       </table>
       <div id="svg_div" class="d-flex flex-column justify-content-center">
