--- a/archive/templates/add_game.html
+++ b/archive/templates/add_game.html
@@ -10,53 +10,53 @@
     <div class="form-row d-flex justify-content-center">
         <div class="form-group col-md-4 m-2">
             <label for="whitePlayer">White player</label>
-            <input class="form-control" id="whitePlayer" name="whitePlayer">
+            <input class="form-control" id="whitePlayer" name="whitePlayer" required>
         </div>
         <div class="form-group col-md-4 m-2">
             <label for="whiteRank">White rank</label>
-            <input class="form-control" id="whiteRank" name="whiteRank" type="number" min="0">
+            <input class="form-control" id="whiteRank" name="whiteRank" type="number" min="0" required>
         </div>
     </div>
 
     <div class="form-row d-flex justify-content-center">
         <div class="form-group col-md-4 m-2">
             <label for="blackPlayer">Black player</label>
-            <input class="form-control" id="blackPlayer" name="blackPlayer">
+            <input class="form-control" id="blackPlayer" name="blackPlayer" required>
         </div>
         <div class="form-group col-md-4 m-2">
             <label for="blackRank">Black rank</label>
-            <input class="form-control" id="blackRank" name="blackRank" type="number" min="0">
+            <input class="form-control" id="blackRank" name="blackRank" type="number" min="0" required>
         </div>
     </div>
 
     <div class="form-row d-flex justify-content-center">
         <div class="form-group col-md-4 m-2">
             <label for="time">Game time (minutes)</label>
-            <input type="number" class="form-control" id="time" name="time" min="1">
+            <input type="number" class="form-control" id="time" name="time" min="1" required>
         </div>
 
         <div class="form-group col-md-4 m-2">
             <label for="increment">Increment (seconds)</label>
-            <input type="number" class="form-control" id="increment" name="increment" min="0">
+            <input type="number" class="form-control" id="increment" name="increment" min="0" required>
         </div>
     </div>
 
     <div class="form-row d-flex justify-content-center">
         <div class="form-group col-md-4 m-2">
             <label for="date">Play date</label>
-            <input type="date" class="form-control" id="date" name="date">
+            <input type="date" class="form-control" id="date" name="date" required>
         </div>
 
         <div class="form-group col-md-4 m-2">
             <label for="moves">Moves PGN</label><br>
-            <textarea class="form-control" id="moves" rows="3" name="moves"></textarea>
+            <textarea class="form-control" id="moves" rows="3" name="moves" required></textarea>
         </div>
     </div>
 
     <div class="form-row d-flex justify-content-center">
         <div class="form-group col-md-8 m-2">
             <label for="note">Note</label>
-            <textarea class="form-control" id="note" rows="3" name="note"></textarea>
+            <textarea class="form-control" id="note" rows="3" name="note" required></textarea>
         </div>
     </div>
 
