--- a/archive/templates/list.html
+++ b/archive/templates/list.html
@@ -8,7 +8,7 @@
 <form method="get" action="{% url 'list' %}" class="mt-3">
   <div class="row">
     <div class="col-xl-1">
-      <label for="sort_by_id" class="align-middle">Sort by</label>
+      <label for="sort_by_id" class="align-middle form-label">Sort by</label>
     </div>
     <div class="col-xl-3">
       <select id="sort_by_id" name="sort_by" class="form-select">
@@ -38,27 +38,27 @@
       <div class="card card-body row container">
         <form method="get" action="{% url 'list' %}" class="row ">
           {% csrf_token %}
-          <div class="form-group col-xl-2 col-md-6 d-flex flex-column mb-5">
-            <label>Search by player name:</label>
-            <input id="player_name" name="player_name">
-          </div>
-          <div class="form-group col-xl-2 col-md-6 d-flex flex-column mb-5">
-            <label>Search by date interval:</label>
-            <input name="date_from" id="date_from" type="date">
-            <input name="date_to" id="date_to" type="date">
-          </div>
-          <div class="form-group col-xl-3 col-md-6 d-flex flex-column mb-5">
-            <label>Search by ranking interval:</label>
-            <input name="ranking_from" id="ranking_from" type="number">
-            <input name="ranking_to" id="ranking_to" type="number">
-          </div>
-          <div class="form-group col-xl-2 col-md-6 d-flex flex-column mb-5" >
-            <label>Search by game time:</label>
-            <input type="number" min="1" name="game_time" id="game_time">
+          <div class="form-group col-xl-2 col-md-6 d-flex flex-column">
+            <label class="form-label">Search by player name:</label>
+            <input id="player_name" name="player_name" class="form-control">
           </div>
           <div class="form-group col-xl-2 col-md-6 d-flex flex-column">
-            <label>Search by first move:</label>
-            <select id="first_move" name="first_move" class="form-select form-select-sm mr-3">
+            <label class="form-label">Search by date interval:</label>
+            <input name="date_from" id="date_from" type="date" class="form-control mb-2">
+            <input name="date_to" id="date_to" type="date" class="form-control">
+          </div>
+          <div class="form-group col-xl-3 col-md-6 d-flex flex-column">
+            <label class="form-label">Search by ranking interval:</label>
+            <input name="ranking_from" id="ranking_from" type="number" class="form-control mb-2">
+            <input name="ranking_to" id="ranking_to" type="number" class="form-control">
+          </div>
+          <div class="form-group col-xl-2 col-md-6 d-flex flex-column" >
+            <label class="form-label">Search by game time:</label>
+            <input type="number" min="1" name="game_time" id="game_time" class="form-control">
+          </div>
+          <div class="form-group col-xl-2 col-md-6 d-flex flex-column">
+            <label class="form-label">Search by first move:</label>
+            <select id="first_move" name="first_move" class="form-select">
               <option disabled selected value="False">--select first move--</option>
               <option name="e4">e4</option>
               <option name="e4">d4</option>
