use DeleteView for game deletion

--- a/archive/templates/details.html
+++ b/archive/templates/details.html
@@ -46,7 +46,7 @@
         </tbody>
       </table>
       <div id="svg_div" class="d-flex flex-column justify-content-center">
-        <a class="btn btn-primary mb-3" href="{% url 'list' %}" style="width:100px">Go Back</a><br>
+        <a class="btn btn-primary mb-3" href="{% url 'game-list' %}" style="width:100px">Go Back</a><br>
         <div class="d-flex justify-content-center">
           {{svg |safe}}
         </div>
