--- a/archive/templates/add_game.html
+++ b/archive/templates/add_game.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<form method="post" action="{% url 'add_game' %}">
+<form method="post" action="{% url 'game-add' %}">
   {% csrf_token %}
     <div class="form-row d-flex justify-content-center">
         <div class="form-group col-md-4 m-2">
