--- a/archive/templates/list.html
+++ b/archive/templates/list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<form method="get" action="{% url 'list' %}" class="mt-3">
+<form method="get" action="{% url 'game-list' %}" class="mt-3">
   <div class="row">
     <div class="col-xl-1">
       <label for="sort_by_id" class="align-middle form-label">Sort by</label>
@@ -36,7 +36,7 @@
   </button>
   <div id="filters" class="collapse mt-5 container">
       <div class="card card-body row container">
-        <form method="get" action="{% url 'list' %}" class="row ">
+        <form method="get" action="{% url 'game-list' %}" class="row ">
           {% csrf_token %}
           <div class="form-group col-xl-2 col-md-6 d-flex flex-column">
             <label class="form-label">Search by player name:</label>
@@ -83,7 +83,7 @@
         </td>
         <td>
           <a class="btn btn-primary" href="{% url 'details' pk=game.id %}" role="button">Details</a>
-          <a class="btn btn-danger" href="{% url 'delete-game' game.id %}" role="button">Delete</a>
+          <a class="btn btn-danger" href="{% url 'game-delete' game.id %}" role="button">Delete</a>
         </td>
       </tr>
     {% endfor %}
