--- a/archive/templates/list.html
+++ b/archive/templates/list.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 {% block content %}
-<form method="get" action="{% url 'game-list' %}" class="mt-3">
+<form method="get" action="{% if private %}{% url 'game-list' %}{% else %}{% url 'user-game-list' owner %}{% endif %}" class="mt-3">
   <div class="row">
     <div class="col-xl-1">
       <label for="sort_by_id" class="align-middle form-label">Sort by</label>
@@ -82,7 +82,9 @@
         </td>
         <td>
           <a class="btn btn-primary" href="{% url 'details' pk=game.id %}" role="button">Details</a>
-          <a class="btn btn-danger" href="{% url 'game-delete' game.id %}" role="button">Delete</a>
+          {% if private %}
+            <a class="btn btn-danger" href="{% url 'game-delete' game.id %}" role="button">Delete</a>
+          {% endif %}
         </td>
       </tr>
     {% endfor %}
